# autodiff_et

./: .gitignore  .travis.yml  CMakeLists.txt
include/: autodiff.hpp  autodiff_expr.hpp  autodiff_expr_wrapper.hpp  autodiff_internal.hpp  autodiff_optimize.hpp  autodiff_tao.hpp  autodiff_transcendental.hpp  petsc_helpers.hpp
src/solver/: NLOptimizer.cpp  SyPDSolver.cpp
tests/: petsc_tests.cpp  test.cpp  test_mesh.cpp  test_optimize.cpp  type_tests.cpp
